<resources>
    <string name="app_name">Internship App</string>
    <string name="silver_standard">Silver Standard</string>
    <string name="next">Next</string>
    <string name="gold_standard">Gold Standard</string>
    <string name="select_your_fiqh">select your Fiqh</string>
    <string name="select_your_time_zone">select your time zone</string>
    <string name="select_your_country">select your country</string>
    <string name="mobile_req">Mobile*</string>
    <string name="confirm_password_req">Confirm password*</string>
    <string name="password_req">Password*</string>
    <string name="email_req">Email*</string>
    <string name="name">Name</string>
    <string name="add_change_profile_picture">add/change profile picture</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_route">Add New Route</string>
</resources>
